@@ -5,6 +5,8 @@ Changes for Crate Data Admin Interface
 Unreleased
 ==========
 
+ - fixed 'Execute Query' button in console view
+
 2014/11/06 0.10.0
 =================
 
